# btc_benchmark

./: .gitignore  README.md  pyproject.toml
btc_benchmark/: __init__.py
btc_benchmark/backtest/: backtester.py  cost_model.py  cpcv.py  metrics.py  overfitting.py  walk_forward.py
btc_benchmark/benchmark/: __init__.py  contract.py  runner.py  validity.py
btc_benchmark/decisions/: baseline_rules.py  random_baseline.py  sign_rule.py
btc_benchmark/features/: technical_indicators.py
btc_benchmark/utils/: io.py  logging.py  time.py
scripts/: bootstrap_data.py  repro_audit3_tailgap.py
tests/: test_auxiliary_alignment.py  test_backtester_accounting.py  test_benchmark_contract.py  test_cost_model.py  test_cpcv.py  test_data_validation.py  test_derivatives_download.py  test_metrics.py  test_overfitting.py  test_resample.py  test_walk_forward.py
