[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-benchmark"
version = "1.0.0"
description = "Frozen referee for the BTC 1h trading benchmark: data pipeline, leakage-controlled walk-forward backtester, causality gates, robustness scoring, leaderboard."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "requests>=2.28",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
packages = [
    "btc_benchmark",
    "btc_benchmark.backtest",
    "btc_benchmark.benchmark",
    "btc_benchmark.data",
    "btc_benchmark.decisions",
    "btc_benchmark.features",
    "btc_benchmark.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
